// =============================================================================
// nsm_universe_weapons.dbml — NSM：宇宙 × 武器目录核心域（universe / weapon / CAS / GSA）
//
// 【层级】脚手架 / 分域导读：起草第一级（MASTER_SPEC）、第二级（all.dbml）时使用；规范性真源为
//   docs/MASTER_SPEC.md + docs/schema/all.dbml。与本文件冲突时以上述为准并回溯修订本文件。
//
// 对齐 docs/MASTER_SPEC.md（公理 III / 第 1.3–1.4 节）
// 工具：dbdiagram.io / DBML
// =============================================================================
//
// 【为何把「客观设定」与「营销文案」拆开】
// - PRD：CAS 产出客观真值，GSA 产出导购话术；二者迭代节奏、审核人与合规边界不同。
// - 合并在单表也可运行，但会导致列语义混杂、部分更新易覆盖另一流水线字段。
// - 推荐：weapons = 目录主实体 + 计价真源；weapon_armament_spec = CAS（description + 五元 + extended_spec jsonb）；weapon_merchandising = GSA。
// - 若坚持单表：可将下列副表列扁平合并进 weapons，并以命名前缀区分 spec_* / merch_*。
//
// 【目录过滤（校准宇宙）】
// - MVP：仅 native_universe_id，目录 WHERE native_universe_id = :calibrated_universe_id。
// - 例外：MASTER_SPEC §3.3「欢迎」Carousel 项 — 全宇宙武器，不限定 native_universe_id。
// - 若未来需「在宇宙 B 上架原生宇宙 A 的武器」等规则，再引入 weapon_listing_eligibility 等多对多。
//
// 【宇宙列表排序】
// - universes 无 sort_order；列举宇宙默认 ORDER BY code ASC（字符串序）。
// =============================================================================

TableGroup universe_weapons {
  universes
  weapons
  weapon_armament_spec
  weapon_merchandising
}

Table universes {
  id uuid [pk, note: '主键']
  code varchar(64) [unique, not null, note: '稳定 slug，用于 API / WHERE']
  name varchar(255) [not null, note: '宇宙展示名']
  description text [note: '完整客观宇宙设定描述（物理法则、冲突语境等）；与展示名区分']
  cover_image_url text [note: '首页 Carousel 16:9 配图 URL；见 MASTER_SPEC §3.3']

  is_active boolean [not null, default: true]
  created_at timestamptz [not null]
  updated_at timestamptz [not null]

  Note: '''
    平行宇宙维度；与「校准宇宙」筛选对应的持久化标识为本表的 id（见 weapons.native_universe_id）。
    description 存完整客观宇宙设定正文；name 为展示短名。列表默认按 code 字符串升序，无 sort_order 列。
  '''
}

Table weapons {
  id uuid [pk]
  sku_code varchar(64) [unique, not null, note: 'SKU / 库存维度']
  native_universe_id uuid [not null, ref: > universes.id, note: '原生宇宙：公理 III 实物锚定']

  list_price_qc bigint [not null, note: '正式标价（QC，整数最小货币单位）；PRD 唯一结算单位']

  is_active boolean [not null, default: true, note: '下架则目录不可见']
  created_at timestamptz [not null]
  updated_at timestamptz [not null]

  indexes {
    (native_universe_id) [name: 'idx_weapons_native_universe']
    (is_active, native_universe_id) [name: 'idx_weapons_catalog_filter']
  }

  Note: '''
    商品主实体：目录行、计价真源、与原生宇宙绑定。
    客观叙事块见 weapon_armament_spec；导购块见 weapon_merchandising。
  '''
}

// -----------------------------------------------------------------------------
// CAS：客观设定（MASTER_SPEC §1.3）。description（完整客观叙述）+ 五元结构化槽 + extended_spec jsonb；不含 Prompt / 画幅 / 美术指令。
// -----------------------------------------------------------------------------
Table weapon_armament_spec {
  weapon_id uuid [pk, ref: - weapons.id, note: '与 weapons 1:1']

  armament_name varchar(255) [not null, note: '客观名称（怎么称呼）；可与 weapon_merchandising.product_title 不同']
  description text [not null, note: '完整武器客观设定描述（叙事与展示用正文）；五元为分项结构化真值；勿与 §1.4 营销 short_description 混同']

  physical_dimensions text [not null, note: '尺寸 / 尺度（实体公设；细化度量可放 extended_spec）']
  construction_feedstock text [not null, note: '原料：制成实体所消耗 / 转化的物质来源']
  usage_dependency text [not null, note: '使用依赖：使用阶段的介质或能源（弹药、工质、电池、药剂；或显式「人力」「无化学消耗」等）']
  operation_principle text [not null, note: '原理：为何能实现杀伤 / 自卫 / 压制']

  extended_spec jsonb [note: '宇宙特异键；Supabase/Postgres jsonb。例：生化 SKU 的 active_genes；勿与五元语义重复']

  defects_and_risks text [note: '可选：固有缺陷与风险']
  design_constraints text [note: '可选：设计合理性 / 约束说明']

  updated_at timestamptz [not null]

  Note: '''
    CAS 客观真值。description 为完整客观叙述；五元为结构化分项；不可通用属性走 extended_spec。
    实现迁移时 description 与五元列 NOT NULL；defects/design 等可选列 nullable。
  '''
}

// -----------------------------------------------------------------------------
// GSA：营销文案（第 1.4 节）。suggested_price_qc 仅为策划参考，不得覆盖 list_price_qc。
// -----------------------------------------------------------------------------
Table weapon_merchandising {
  weapon_id uuid [pk, ref: - weapons.id, note: '与 weapons 1:1']

  product_title varchar(255) [note: '商业花名 / 导购标题']
  short_description varchar(512) [note: '销售短评']
  key_features jsonb [note: '核心卖点；建议存 JSON 字符串数组，如 ["卖点1","卖点2","卖点3"]']

  promo_copy text [note: '促销与活动向补充文案：限时、折扣、套装、券口径等；与 short_description（常设导购短评）区分，可空']

  suggested_price_qc bigint [note: 'GSA 建议价（策划参考，非正式售价）']

  updated_at timestamptz [not null]

  Note: '''
    导购与转化层；允许风格化，但与 native_universe / 物理可行性验收需在应用层核对。
  '''
}

// 表间关系全部由列内 ref: 声明（勿再写重复 Ref:，否则 dbdiagram 报 References with same endpoints exist）
